# dtu-social-data-assignments

./: README.md  pyproject.toml
assignment-1/: Assignment1-aryan.ipynb  Assignment1.ipynb  Assignment1Vlad.ipynb
data/: sf_crime_merged.csv
